// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductName Should show correctly the component  1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Product 1
  </span>
</div>
`;

exports[`ProductName Should show correctly the component with personalized name  1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription prueba"
  >
    Product X
  </span>
</div>
`;
